new feature: given greater score to the contents present in the text of the html tag compared to the others